refactor: :hammer: upgrade spring boot & add security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
+
+jwt.secret= sQB7pdKECSBWRTdB73qxdgi/UWhGQ+SB71MErmMqADw=
